# memgpt

./: Justfile  README.md  pyproject.toml
pysrc/memgpt/: agent.py  constants.py  memory.py  openai_tools.py  persistence_manager.py  presets.py  system.py  utils.py
pysrc/memgpt/humans/: humans.py
pysrc/memgpt/humans/examples/: cs_phd.txt
pysrc/memgpt/personas/: personas.py
pysrc/memgpt/personas/examples/: memgpt_doc.txt  memgpt_starter.txt  sam.txt
pysrc/memgpt/personas/examples/docqa/: build_index.py  generate_embeddings_for_docs.py  openai_parallel_request_processor.py  scrape_docs.py
pysrc/memgpt/prompts/: gpt_functions.py  gpt_system.py
pysrc/memgpt/prompts/system/: memgpt_base.txt  memgpt_chat.txt  memgpt_doc.txt
